updated master CSV file

--- a/utilities/CSV_Events_file_cleanup.ipynb
+++ b/utilities/CSV_Events_file_cleanup.ipynb
@@ -8,6 +8,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deprecated\n",
+    "\n",
+    "Run the python module `prepare_events_CSV.py` instead."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -528,22 +537,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['eventID', 'itemDifficulty', 'America', 'Europe', 'Asia', 'Africa',\n",
-       "       'China', 'Discovery', 'Britain', 'France', 'Greek', 'India',\n",
-       "       'Invention', 'MiddleEast', 'prehistory', 'Religion', 'Roman', 'Royalty',\n",
-       "       'Russia', 'Science', 'Wars', 'World'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-72d828f1856a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdescribe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
